# ChangeLog for xfce-extra/xfce4-mount-plugin
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-mount-plugin/ChangeLog,v 1.10 2012/05/05 07:17:20 mgorny Exp $

  05 May 2012; Michał Górny <mgorny@gentoo.org>
  xfce4-mount-plugin-0.5.5.ebuild, xfce4-mount-plugin-0.6.3.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  29 Apr 2012; Samuli Suominen <ssuominen@gentoo.org>
  -xfce4-mount-plugin-0.6.1.ebuild, -xfce4-mount-plugin-0.6.2.ebuild:
  old

*xfce4-mount-plugin-0.6.3 (29 Apr 2012)

  29 Apr 2012; Samuli Suominen <ssuominen@gentoo.org>
  +xfce4-mount-plugin-0.6.3.ebuild:
  Version bump.

*xfce4-mount-plugin-0.6.2 (26 Apr 2012)

  26 Apr 2012; Samuli Suominen <ssuominen@gentoo.org>
  +xfce4-mount-plugin-0.6.2.ebuild:
  Version bump.

  20 Apr 2012; Samuli Suominen <ssuominen@gentoo.org>
  -xfce4-mount-plugin-0.6.0.ebuild:
  old

*xfce4-mount-plugin-0.6.1 (18 Apr 2012)

  18 Apr 2012; Samuli Suominen <ssuominen@gentoo.org>
  +xfce4-mount-plugin-0.6.1.ebuild:
  Version bump.

*xfce4-mount-plugin-0.6.0 (17 Apr 2012)

  17 Apr 2012; Samuli Suominen <ssuominen@gentoo.org>
  +xfce4-mount-plugin-0.6.0.ebuild:
  Version bump.

  09 Apr 2012; Samuli Suominen <ssuominen@gentoo.org>
  xfce4-mount-plugin-0.5.5.ebuild:
  Use libdir instead of libexecdir.

  08 Oct 2009; Jeremy Olexa <darkside@gentoo.org>
  xfce4-mount-plugin-0.5.5.ebuild:
  add prefix keywords - migrate from Gentoo Prefix

*xfce4-mount-plugin-0.5.5 (24 Aug 2009)

  24 Aug 2009; Samuli Suominen <ssuominen@gentoo.org>
  +xfce4-mount-plugin-0.5.5.ebuild:
  Rename xfce4-mount to xfce4-mount-plugin.
