@@ -1,18 +1,22 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA1
 
 DIST xfce4-mount-plugin-0.5.5.tar.bz2 188141 RMD160 60b762499a7ba923414556de0562885f1225cfd5 SHA1 1215093edd37e684542dc14375a1c349eee64a2c SHA256 76fc4e2712cdce3bee57bea701afe3847725c629f47670741de14364b836f8a8
 DIST xfce4-mount-plugin-0.6.3.tar.bz2 382067 RMD160 134df5a9ffc7e429319dca1c04379aea2c957878 SHA1 bbc031f8518dc873d3a3ef42b3e228eeb0c9bb86 SHA256 13272e9d648314d86bb334ef27b768067943d120fe2f756fd1b6e7f9b9549768
+DIST xfce4-mount-plugin-0.6.4.tar.bz2 390365 RMD160 0f1fd6cab065d0a85b335ec340f0f5a24db3cdf8 SHA1 d132a9bbd15398dc1e83e28c6cb3801089c7fa2e SHA256 541d7af84d7d0b00ae547aa1f438e2fac51ee4195c4d0a17173c4f72accb227d
 EBUILD xfce4-mount-plugin-0.5.5.ebuild 872 RMD160 2254ec786b77503169230a3c728c8e23c0ad2175 SHA1 f317e699b0a5cfe94a90d54dbe9677a4a4e0cb26 SHA256 097f246b4db9c07a339e7915d64f44339ef92c39baef71e612f95aeb57fe7af8
 EBUILD xfce4-mount-plugin-0.6.3.ebuild 829 RMD160 77f5c72eb56eca151780abb65557bc88d21f6734 SHA1 8b8536a0ed2c2c00e07db8c4159079bc7ff30ea0 SHA256 dcdfad3acbedb29b206770b742fdd69aa9e5fb5a66b3b02fac09f687ad5edad0
-MISC ChangeLog 1652 RMD160 87288792101ca142fa5cc608a63cb5a57b09ccbd SHA1 b43356afab31f42f5f9604c6346e3a84a61b2945 SHA256 02f4f5fb86858d986159c5120a353366da2bd3c0c1f758625af09e5101da5497
+EBUILD xfce4-mount-plugin-0.6.4.ebuild 832 RMD160 516aff007520b2ae3b4306496befa0896e2da71e SHA1 0f88df75c328ce0e8229265d4f4719e0ffde1c97 SHA256 aa2d6df3bc511abf4def2be885700f4da2b47b9831da0dc0a46df7d3c3d41eaa
+MISC ChangeLog 1803 RMD160 98c1eeb28010769954405d822e7848d69b392aba SHA1 6513d4a633a480ce8331f704018e4d1a34a52144 SHA256 84f9c090f69e4c3b6358d0b69a32b48e05ed0d9f94d3076ecb562ffdac46a858
 MISC metadata.xml 159 RMD160 43722935bd7b4db7fe8db681054f2e53c4a5f7ce SHA1 15958ad72e234ba572c9534533c21532eb6bc0fd SHA256 900ea49b6703fce452e205b85226bf1f994725963e5840da501182e7487d0e63
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iJwEAQEIAAYFAk+k1DIACgkQfXuS5UK5QB3NTgP+IxUgBVdzYUikTCgTG6aDdgtM
-UyKhySE/h7fGkBmlPMsVUr5iKVH7S0bfnojTQz3zrJ1fQeYuGDp0sTkM5oSd/Cxy
-cAyqeqhmQGDcRICRX+OvMnU8QDLpZpOfY5zEIJ87SVBK9ZKhZjW4emTQUDu7v+kS
-Qqq4fKnAGlFkTFuHL/U=
-=Ntrb
+iQEcBAEBAgAGBQJPsSAFAAoJEEdUh39IaPFNSAMH/1SmeXrElLzpwE8Mdy+JRfLS
+lvL4WziMNiPKshitk1uZwzSjbVqactRga551GFpKmh5Atp1wvNiDmeJznIv1w1bt
+uDGxikZJ2l+8bvHZnD/nFgtvTUAngAfsl76c8a3SsbKmxPhoxXgilPum7ykKvb5Y
+NGAaVfT6S4V4s31NLGVqNY0SWldHhwmzPhbwgdl0Q4a191CLbghFRkc4PTSzdkXT
+Dw7lLbjxqtqkqmsGbC/HowKGJy1rEvqTt6d+RsrC+TI14KEcmdgE6B/A5PzJBjHy
+CAVSCmhy7e16Z9ohMu8ar+frBqUjHWNTeU3aApX22Cx3EzxmAFA32BoRZZllWDg=
+=KaHA
 -----END PGP SIGNATURE-----
