@@ -1,0 +1,29 @@
+# Copyright 1999-2012 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-mount-plugin/xfce4-mount-plugin-0.6.4.ebuild,v 1.1 2012/05/14 15:12:07 ssuominen Exp $
+
+EAPI=4
+inherit xfconf
+
+DESCRIPTION="An mount plug-in for the Xfce panel"
+HOMEPAGE="http://goodies.xfce.org/projects/panel-plugins/xfce4-mount-plugin"
+SRC_URI="mirror://xfce/src/panel-plugins/${PN}/${PV%.*}/${P}.tar.bz2"
+
+LICENSE="GPL-2"
+SLOT="0"
+KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~ppc ~ppc64 ~sparc ~x86 ~amd64-linux ~ia64-linux ~x86-linux"
+IUSE="debug"
+
+RDEPEND=">=xfce-base/libxfce4ui-4.8
+	>=xfce-base/xfce4-panel-4.8"
+DEPEND="${RDEPEND}
+	dev-util/intltool
+	virtual/pkgconfig"
+
+pkg_setup() {
+	XFCONF=(
+		$(xfconf_use_debug)
+		)
+
+	DOCS=( AUTHORS ChangeLog NEWS README TODO )
+}
