@@ -1,6 +1,12 @@
 # ChangeLog for xfce-extra/xfce4-mount-plugin
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-mount-plugin/ChangeLog,v 1.10 2012/05/05 07:17:20 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-mount-plugin/ChangeLog,v 1.11 2012/05/14 15:12:07 ssuominen Exp $
+
+*xfce4-mount-plugin-0.6.4 (14 May 2012)
+
+  14 May 2012; Samuli Suominen <ssuominen@gentoo.org>
+  +xfce4-mount-plugin-0.6.4.ebuild:
+  Version bump.
 
   05 May 2012; Michał Górny <mgorny@gentoo.org>
   xfce4-mount-plugin-0.5.5.ebuild, xfce4-mount-plugin-0.6.3.ebuild:
